[gd_scene load_steps=2 format=3 uid="uid://cr7v4m2k8w5fx"]

[ext_resource type="Script" path="res://multiplayer/network_ui.gd" id="1"]

[node name="NetworkUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -180.0
offset_right = 180.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Multiplayer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AddressInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Server Address"

[node name="PortInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Port"

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="DisconnectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Disconnect"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Not connected"
horizontal_alignment = 1

[node name="PlayerListLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Players: 0"
